KUBE-manifests/04-Ingress-Manifests/Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app1-app2-app3
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app1.nvncloud.com    
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-nginx-clusterip-service
          servicePort: 80
  - host: app2.nvncloud.com    
    http:
      paths:
      - path: /
        backend:
          serviceName: app2-nginx-clusterip-service
          servicePort: 80  
  - host: app3.nvncloud.com    
    http:
      paths:
      - path: /
        backend:
          serviceName: usermgmt-webapp-clusterip-service
          servicePort: 80
